--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,12 @@
     margin-top: 10px;
     background-color: #229954;
 }
+
+#datepicker  {
+  margin-left: 20%; 
+}
+
+.event a {
+  background-color: #5FBA7D !important;
+  color: #ffffff !important;
+}
