--- a/css/style.css
+++ b/css/style.css
@@ -11,3 +11,11 @@
   background-color: #5FBA7D !important;
   color: #ffffff !important;
 }
+
+.datetext{
+  width: 170px;
+  border-radius: 4px;
+  height: 38px;
+  border: 2px solid #ddd;
+  padding-left: 10px;
+}
